--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,10 +3,10 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(href='http://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.min.css', rel='stylesheet', type='text/css')
+    link(href='https://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.min.css', rel='stylesheet', type='text/css')
     link(href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css', rel='stylesheet')
-    script(src='http://code.jquery.com/jquery-2.1.3.js')
-    script(src='http://code.jquery.com/ui/1.11.2/jquery-ui.min.js')
+    script(src='https://code.jquery.com/jquery-2.1.3.js')
+    script(src='https://code.jquery.com/ui/1.11.2/jquery-ui.min.js')
 
   body
     block content
